# Python_package_template

./: requirements.txt  requirements_dev.txt  setup.cfg  setup.py  template.py
template/: init_setup.sh  pyproject.toml  requirements_dev.txt
