# it is a ini file so chatpe to ini first
[build-system]
requires = ['setuptools>=42.0', "wheel"]
build-backend = "setuptools.build_meta"
# These are the assumed default build requirements from pip:
# https://pip.pypa.io/en/stable/reference/pip/#pep-517-and-518-support
[tool.pytest.ini_options]
testpaths = [
    "tests"
    ]

[tool.mypy]
mypy_path = "src"
ignore_missing_imports = true